cmake_minimum_required(VERSION 3.24)
project(Lab_9_10)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab_9_10 main.cpp Produs.h Produs.cpp Repo.h Repo.cpp Service.h Service.cpp UI.h UI.cpp Tests.h Tests.cpp Tonomat.h Tonomat.cpp TonomatMaiBun.h TonomatMaiBun.cpp TonomatMaiBun.cpp RepoFile.h RepoFile.cpp exceptii.h)
